--- a/wordpress/Dockerfile
+++ b/wordpress/Dockerfile
@@ -1,17 +1,22 @@
 FROM debian:bullseye-slim
 
 # Install necessary packages
-RUN apt-get update && apt-get install -y \
+RUN apt-get update && apt-get upgrade && apt-get install -y \
     nginx \
     php7.4 \
     php-fpm \
     php-mysql \
     wget \
-    unzip \
-    && rm -rf /var/lib/apt/lists/*
+    unzip
 
 # Download and set up WordPress
+
+# Copy startup script
+COPY ./start.sh /start.sh
+RUN chmod 777 /start.sh
+
 WORKDIR /var/www/html
+
 RUN wget https://wordpress.org/latest.zip && \
     unzip latest.zip && \
     rm latest.zip && \
@@ -22,10 +27,6 @@ RUN wget https://wordpress.org/latest.zip && \
 # Copy configuration files
 COPY default.conf /etc/nginx/conf.d/default.conf
 # COPY wp-config.php /var/www/html/wp-config.php
-
-# Copy startup script
-COPY start.sh /start.sh
-RUN chmod +x /start.sh
 
 # Expose the default HTTP port
 EXPOSE 80
