--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -1,8 +1,13 @@
 server {
-    listen 80;
-    server_name localhost ;
+    listen 443 ssl;
+    
+    ssl_certificate /etc/nginx/ssl/nginx-selfsigned.crt;
+    ssl_certificate_key /etc/nginx/ssl/nginx-selfsigned.key;
+    ssl_protocols TLSv1.2 TLSv1.3;
+    
+    server_name localhost;
     root /var/www/html/; 
-    index index.php ;
+    index index.php;
 
     location / {
         try_files $uri $uri/ /index.php?$args;
