--- a/wordpress/Dockerfile
+++ b/wordpress/Dockerfile
@@ -2,22 +2,24 @@ FROM debian:bullseye-slim
 
 # Install necessary packages
 RUN apt-get update -y && apt-get upgrade -y && apt-get install -y \
+mariadb-client \
     php7.4 \
     php-fpm \
     php-mysql \
     wget \
-    unzip
+    unzip 
 
-# RUN wget https://raw.githubusercontent.com/wp-cli/builds/gh-pages/phar/wp-cli.phar
+RUN wget https://raw.githubusercontent.com/wp-cli/builds/gh-pages/phar/wp-cli.phar
 
-# RUN chmod +x wp-cli.phar
+RUN chmod +x wp-cli.phar
 
-# RUN mv wp-cli.phar /usr/local/bin/wp
+RUN mv wp-cli.phar /usr/local/bin/wp
 # Copy startup script
 COPY ./start.sh /start.sh
 RUN chmod 777 /start.sh
+
 # Expose the default HTTP port
-EXPOSE 80
+EXPOSE 9000
 
 # Start services
 CMD ["/start.sh"]
