--- a/mariadb/Dockerfile
+++ b/mariadb/Dockerfile
@@ -2,7 +2,7 @@
 FROM debian:bullseye
 
 # Install MariaDB
-RUN apt-get update && \
+RUN apt-get  update -y && \
     apt-get install -y mariadb-server && \
     rm -rf /var/lib/apt/lists/*
 
