--- a/nginx/Dockerfile
+++ b/nginx/Dockerfile
@@ -1,5 +1,5 @@
 # Nginx Dockerfile
-FROM debian:bullseye-slim
+FROM debian:bullseye
 
 # Install necessary packages
 RUN apt-get update -y && apt-get upgrade -y && apt-get install -y nginx openssl && \
@@ -11,7 +11,7 @@ RUN mkdir -p /etc/nginx/ssl
 RUN openssl req -x509 -nodes -days 365 -newkey rsa:2048 \
     -keyout /etc/nginx/ssl/nginx-selfsigned.key \
     -out /etc/nginx/ssl/nginx-selfsigned.crt \
-    -subj "/C=US/ST=Denial/L=Springfield/O=Dis/CN=localhost"
+    -subj "/C=US/ST=Denial/L=Springfield/O=Dis/CN=mabahani.42.fr"
 
 # Copy configuration files
 COPY default.conf /etc/nginx/conf.d/default.conf
