--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -5,7 +5,7 @@ server {
     ssl_certificate_key /etc/nginx/ssl/nginx-selfsigned.key;
     ssl_protocols TLSv1.2 TLSv1.3;
     
-    server_name localhost;
+    server_name _;
     root /var/www/html/; 
     index index.php;
 
