--- a/srcs/requirements/nginx/tools/default.conf
+++ b/srcs/requirements/nginx/tools/default.conf
@@ -5,17 +5,18 @@ server {
     ssl_certificate_key /etc/nginx/ssl/nginx-selfsigned.key;
     ssl_protocols TLSv1.2 TLSv1.3;
     
-    server_name _;
+   
+    server_name mabahani.42.fr;
     root /var/www/html/; 
     index index.php;
 
     location / {
-        try_files $uri $uri/ /index.php?$args;
+        try_files $uri $uri/ =404;
     }
 
     location ~ \.php$ {
         include fastcgi_params;
-        fastcgi_pass wordpress:9000;
         fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
+        fastcgi_pass wordpress:9000;
     }
 }
