--- a/srcs/requirements/nginx/Dockerfile
+++ b/srcs/requirements/nginx/Dockerfile
@@ -2,16 +2,14 @@
 FROM debian:bullseye
 
 # Install necessary packages
-RUN apt-get update -y && apt-get upgrade -y && apt-get install -y nginx openssl && \
-    apt-get clean && rm -rf /var/lib/apt/lists/*
-
+RUN apt-get update -y && apt-get upgrade -y && apt-get install -y nginx openssl
 RUN mkdir -p /etc/nginx/ssl
 
 # Generate SSL certificate
 RUN openssl req -x509 -nodes -days 365 -newkey rsa:2048 \
     -keyout /etc/nginx/ssl/nginx-selfsigned.key \
     -out /etc/nginx/ssl/nginx-selfsigned.crt \
-    -subj "/C=US/ST=Denial/L=Springfield/O=Dis/CN=mabahani.42.fr"
+    -subj "/C=MA/ST=Hamid/L=BenGuerir/O=dadas/CN=mabahani.42.fr"
 
 # Copy configuration files
 COPY ./tools/default.conf /etc/nginx/conf.d/default.conf
@@ -20,4 +18,4 @@ COPY ./tools/default.conf /etc/nginx/conf.d/default.conf
 EXPOSE 443
 
 # Start services
-CMD ["nginx", "-g", "daemon off;"]
+ENTRYPOINT ["nginx", "-g", "daemon off;"]
